--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> -->
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <form class="fieldContaineur" id="fieldContaineur" method="post" action="#">
@@ -40,13 +38,13 @@
         </div>
 
         <button type="submit" class="submitField" id="submitBtn">
-            <img src="/paper-plane-outline.svg" alt="">
+            <img src="./assets/paper-plane-outline.svg" alt="">
             <div class="mouse" id="mouse"></div>
             <div class="mouse2" id="mouse2"></div>
         </button>
     </form>
 </body>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-<script src="app.js"></script>
-<script src="script.js"></script>
+<script src="./app.js"></script>
+<script src="./script.js"></script>
 </html>
